--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <div class="logo">
   <a href="#home">
-        <img src="images/brandnametransparent.jpg">
-        <img class="top-img" src="images/brandnamegreen.jpg">
+        <img src="images/image1">
+        <img class="top-img" src="images/image2">
   </a>
 </div>
